[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/Effects/EnterEffect.tres" type="Animation" id=1]
[ext_resource path="res://Graphics/Effects/StaticShader.tres" type="Material" id=2]
[ext_resource path="res://Graphics/Effects/EnterExitShader.tres" type="Material" id=3]
[ext_resource path="res://Graphics/Effects/NoireShader.tres" type="Material" id=4]
[ext_resource path="res://Graphics/Effects/VignetteShader.tres" type="Material" id=5]
[ext_resource path="res://Scripts/ScreenEffects.gd" type="Script" id=6]
[ext_resource path="res://Graphics/Effects/ScenesTESTINGTESTING.tres" type="Animation" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnterExitEffect:material:shader_param/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[node name="ScreenEffects" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
use_enter_exit = true

[node name="EffectAnimator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/TESTINGTESTING = ExtResource( 7 )
anims/Transition = ExtResource( 1 )

[node name="NoireEffect" type="ColorRect" parent="."]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StaticEffect" type="ColorRect" parent="."]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnterExitEffect" type="ColorRect" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VignetteEffect" type="ColorRect" parent="."]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
